--- a/NiziKit.Editor/Views/ImportPanel.axaml
+++ b/NiziKit.Editor/Views/ImportPanel.axaml
@@ -110,20 +110,24 @@
                                      Watermark="(root output)"/>
                         </Grid>
 
-                        <!-- Scanning indicator -->
+                        <!-- Texture options -->
+                        <StackPanel Spacing="8" IsVisible="{Binding IsTexture}">
+                            <CheckBox Content="Generate Mipmaps" IsChecked="{Binding GenerateMips}"/>
+                        </StackPanel>
+
+                        <!-- Model: scanning indicator -->
                         <StackPanel Orientation="Horizontal" Spacing="8"
                                     IsVisible="{Binding IsScanning}">
                             <ProgressBar IsIndeterminate="True" Width="80" Height="4"/>
                             <TextBlock Text="Scanning..." Foreground="{StaticResource EditorTextSecondary}"/>
                         </StackPanel>
 
-                        <!-- Scan error -->
                         <TextBlock Text="{Binding ScanError}"
                                    Foreground="Red"
                                    TextWrapping="Wrap"
                                    IsVisible="{Binding ScanError, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"/>
 
-                        <!-- Meshes section -->
+                        <!-- Model: Meshes -->
                         <Expander Header="Meshes" IsExpanded="True"
                                   IsVisible="{Binding ScanComplete}">
                             <ItemsControl ItemsSource="{Binding Meshes}" Margin="8,4">
@@ -141,15 +145,14 @@
                                                        Text="{Binding DisplayInfo}"
                                                        VerticalAlignment="Center"
                                                        Foreground="{StaticResource EditorTextSecondary}"
-                                                       Margin="12,0,0,0"
-                                                       />
+                                                       Margin="12,0,0,0"/>
                                         </Grid>
                                     </DataTemplate>
                                 </ItemsControl.ItemTemplate>
                             </ItemsControl>
                         </Expander>
 
-                        <!-- Skeleton section -->
+                        <!-- Model: Skeleton -->
                         <Border IsVisible="{Binding HasSkeleton}"
                                 Background="{StaticResource EditorPanelSecondaryBackground}"
                                 Padding="12,8"
@@ -161,8 +164,7 @@
                                 <TextBlock Grid.Column="1"
                                            VerticalAlignment="Center"
                                            HorizontalAlignment="Right"
-                                           Foreground="{StaticResource EditorTextSecondary}"
-                                           >
+                                           Foreground="{StaticResource EditorTextSecondary}">
                                     <TextBlock.Text>
                                         <MultiBinding StringFormat="{}{0} joints, root: {1}">
                                             <Binding Path="JointCount"/>
@@ -173,7 +175,7 @@
                             </Grid>
                         </Border>
 
-                        <!-- Animations section -->
+                        <!-- Model: Animations -->
                         <Expander Header="Animations" IsExpanded="True"
                                   IsVisible="{Binding ScanComplete}">
                             <StackPanel Spacing="4" Margin="8,4">
@@ -196,8 +198,7 @@
                                                            Text="{Binding DisplayInfo}"
                                                            VerticalAlignment="Center"
                                                            Foreground="{StaticResource EditorTextSecondary}"
-                                                           Margin="12,0,0,0"
-                                                           />
+                                                           Margin="12,0,0,0"/>
                                             </Grid>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
@@ -205,7 +206,7 @@
                             </StackPanel>
                         </Expander>
 
-                        <!-- Options section -->
+                        <!-- Model: Options -->
                         <Expander Header="Options" IsExpanded="False"
                                   IsVisible="{Binding ScanComplete}">
                             <StackPanel Spacing="8" Margin="8,4">
