--- a/NiziKit.Editor/Views/SceneTreeView.axaml
+++ b/NiziKit.Editor/Views/SceneTreeView.axaml
@@ -11,8 +11,33 @@
     </UserControl.Resources>
 
     <Panel>
-        <Grid RowDefinitions="*,Auto">
-            <TreeView Grid.Row="0"
+        <Grid RowDefinitions="Auto,*,Auto">
+            <Border Grid.Row="0"
+                    x:Name="SceneRootNode"
+                    Padding="6,8"
+                    Margin="0,0,0,4"
+                    Cursor="Hand">
+                <Border.Styles>
+                    <Style Selector="Border#SceneRootNode">
+                        <Setter Property="Background" Value="Transparent"/>
+                    </Style>
+                    <Style Selector="Border#SceneRootNode.selected">
+                        <Setter Property="Background" Value="{DynamicResource EditorSelected}"/>
+                    </Style>
+                    <Style Selector="Border#SceneRootNode:not(.selected):pointerover">
+                        <Setter Property="Background" Value="{DynamicResource EditorHover}"/>
+                    </Style>
+                </Border.Styles>
+                <StackPanel Orientation="Horizontal" Spacing="10">
+                    <PathIcon Data="M18,18H6V6H18M18,4H6A2,2 0 0,0 4,6V18A2,2 0 0,0 6,20H18A2,2 0 0,0 20,18V6C20,4.89 19.1,4 18,4Z"
+                              Width="20" Height="20"
+                              Foreground="{StaticResource EditorAccentBrush}"/>
+                    <TextBlock Text="{Binding SceneDisplayName, FallbackValue='Scene'}"
+                               VerticalAlignment="Center"
+                               FontWeight="SemiBold"/>
+                </StackPanel>
+            </Border>
+            <TreeView Grid.Row="1"
                       x:Name="SceneTree"
                       ItemsSource="{Binding RootObjects}"
                       SelectionMode="Single"
@@ -52,7 +77,7 @@
                 </TreeView.Styles>
             </TreeView>
 
-            <Border Grid.Row="1"
+            <Border Grid.Row="2"
                     x:Name="DeleteConfirmPanel"
                     IsVisible="False"
                     Classes="status-error"
